--- a/payapa.android/app/src/main/res/layout/activity_profile.xml
+++ b/payapa.android/app/src/main/res/layout/activity_profile.xml
@@ -130,7 +130,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:gravity="center"
-                    android:text="Dailt Task"
+                    android:text="Daily Task"
                     android:textSize="20dp" />
 
                 <ImageView
