--- a/payapa.android/app/src/main/res/layout/activity_question.xml
+++ b/payapa.android/app/src/main/res/layout/activity_question.xml
@@ -5,28 +5,59 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     tools:context=".QuestionActivity">
 
     <LinearLayout
         android:id="@+id/linear_layout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_gravity="center">
 
-        <TextView
-            android:id="@+id/question_text"
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Question"
-            android:textSize="18sp"
-            android:layout_gravity="center_horizontal"
-            android:paddingBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="8dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="8dp"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:id="@+id/question_no"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Question"
+                    android:textSize="12sp"
+                    android:layout_gravity="start"
+                    android:textColor="@color/black"
+                    android:textStyle="italic" />
+
+                <!-- TextView for the question -->
+                <TextView
+                    android:id="@+id/question_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Question"
+                    android:textSize="20sp"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <!-- GridLayout for answer choices -->
         <androidx.gridlayout.widget.GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,7 +72,8 @@
                 android:text="None of the time"
                 app:layout_columnSpan="1"
                 app:layout_columnWeight="1"
-                app:layout_gravity="fill" />
+                app:layout_gravity="fill"
+                android:backgroundTint="@color/dgreen" />
 
             <Button
                 android:id="@+id/choice_little"
@@ -49,7 +81,8 @@
                 android:layout_height="wrap_content"
                 android:text="A little of the time"
                 app:layout_columnWeight="1"
-                app:layout_gravity="fill" />
+                app:layout_gravity="fill"
+                android:backgroundTint="@color/dgreen" />
 
             <Button
                 android:id="@+id/choice_some"
@@ -57,7 +90,8 @@
                 android:layout_height="wrap_content"
                 android:text="Some of the time"
                 app:layout_columnWeight="1"
-                app:layout_gravity="fill" />
+                app:layout_gravity="fill"
+                android:backgroundTint="@color/dgreen" />
 
             <Button
                 android:id="@+id/choice_most"
@@ -65,7 +99,8 @@
                 android:layout_height="wrap_content"
                 android:text="Most of the time"
                 app:layout_columnWeight="1"
-                app:layout_gravity="fill" />
+                app:layout_gravity="fill"
+                android:backgroundTint="@color/dgreen" />
 
             <Button
                 android:id="@+id/choice_all"
@@ -73,7 +108,8 @@
                 android:layout_height="wrap_content"
                 android:text="All of the time"
                 app:layout_columnSpan="2"
-                app:layout_gravity="fill" />
+                app:layout_gravity="fill"
+                android:backgroundTint="@color/dgreen" />
         </androidx.gridlayout.widget.GridLayout>
     </LinearLayout>
 
