--- a/payapa.android/app/src/main/res/layout/activity_main.xml
+++ b/payapa.android/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/test"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/rounded_button_background"
+        android:onClick="onDetectButtonClick"
+        android:text="test"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:ignore="OnClick" />
+
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -66,6 +78,8 @@
             android:text="@string/detect"
             android:visibility="gone"
             tools:ignore="OnClick" />
+
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
