--- a/payapa.android/app/src/main/res/layout/activity_profile.xml
+++ b/payapa.android/app/src/main/res/layout/activity_profile.xml
@@ -62,43 +62,65 @@
 
         </LinearLayout>
     </LinearLayout>
-    <!-- Consultaion -->
+
+    <!-- Consultation Appointment -->
     <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="337dp"
-        android:layout_height="108dp"
-        android:layout_marginTop="28dp"
+        android:id="@+id/consultationLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/rec"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
+        android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/scheduledLayout"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Consultation Appointment"
+            android:textAlignment="center"
+            android:textSize="18sp" />
 
-            <TextView
-                android:layout_width="237dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="0dp"
-                android:text="Consultation Appointment"
-                android:textAlignment="center"
-                android:textSize="25dp" />
+        <TextView
+            android:id="@+id/clicktoschedule"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Click to Schedule"
+            android:textColor="@color/dblue"
+            android:textSize="12sp" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/clicktoschedule"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:text="Click to Schedule"
-                android:textColor="@color/dblue"
-                android:textSize="15dp" />
+    <!-- Scheduled Appointment -->
+    <LinearLayout
+        android:id="@+id/scheduledLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rec"
+        android:orientation="vertical"
+        android:gravity="center"
+        app:layout_constraintStart_toEndOf="@+id/consultationLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-        </LinearLayout>
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Scheduled Appointment"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/scheduledAppointment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Click to View"
+            android:textColor="@color/dblue"
+            android:textSize="12sp" />
     </LinearLayout>
     <!-- entertains -->
 
@@ -110,7 +132,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/scheduledLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
