--- a/payapa.android/app/src/main/res/layout/activity_manageprofile.xml
+++ b/payapa.android/app/src/main/res/layout/activity_manageprofile.xml
@@ -10,16 +10,30 @@
     android:background="@drawable/bg"
     tools:context=".ManageprofileActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="Settings"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Settings"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/logoutBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout"
+            android:backgroundTint="@color/dgreen" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView3"
@@ -31,7 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <ImageView
         android:id="@+id/profileImageView"
@@ -48,6 +62,7 @@
         android:id="@+id/uploadProfilePictureButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/dgreen"
         android:text="Upload Profile Picture"
         app:layout_constraintBottom_toTopOf="@+id/nicknameEditText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,13 +122,12 @@
         app:layout_constraintTop_toBottomOf="@+id/emailEditText"
         app:layout_constraintWidth_percent="0.9" />
 
-
-
     <Button
         android:id="@+id/saveChangesButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save Changes"
+        android:backgroundTint="@color/dgreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
