--- a/payapa.android/app/src/main/res/layout/activity_user_additional_information.xml
+++ b/payapa.android/app/src/main/res/layout/activity_user_additional_information.xml
@@ -6,8 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
-    tools:context=".RegisterActivity">
+    android:background="@drawable/bg">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -87,6 +86,24 @@
             android:padding="14dp"
             android:textColor="@color/black"
             android:layout_marginTop="10dp" />
+
+        <Spinner
+            android:id="@+id/role_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/spinner_border"
+            android:layout_marginTop="10dp"
+            android:padding="14dp"
+            android:spinnerMode="dropdown" />
+
+        <Spinner
+            android:id="@+id/department_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/spinner_border"
+            android:layout_marginTop="10dp"
+            android:padding="14dp"
+            android:spinnerMode="dropdown" />
 
         <LinearLayout
             android:id="@+id/course_year_layout"
