--- a/payapa.android/app/src/main/res/layout/activity_scheduled_activity.xml
+++ b/payapa.android/app/src/main/res/layout/activity_scheduled_activity.xml
@@ -20,54 +20,26 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/appointmentCard"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:padding="16dp"
-        android:backgroundTint="@android:color/white"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title">
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="50dp">
 
         <LinearLayout
+            android:id="@+id/appointmentsContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:orientation="vertical" />
 
-            <TextView
-                android:id="@+id/scheduledDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Date"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:paddingBottom="4dp" />
-
-            <TextView
-                android:id="@+id/scheduledTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Time"
-                android:paddingBottom="4dp" />
-
-            <TextView
-                android:id="@+id/appointmentMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Message"
-                android:paddingBottom="4dp" />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </ScrollView>
 
     <TextView
         android:id="@+id/noAppointmentText"
